Optimise allocs, and simplify a bit.
Add benchmarks from #460